# vendeeglobe

./: .gitignore  LICENSE  README.md  pyproject.toml
run/: play.py  template_bot.py  test.py  tournament.py
src/vendeeglobe/: __init__.py  config.py  core.py  engine.py  graphics.py  main.py  map.py  player.py  scores.py  sphere.py  utils.py  weather.py
