[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vendeeglobe"
version = "0.1.0"
description = "Solo sailing race around the world"
license = {text = "BSD-3-Clause"}
authors = [{name = "Neil Vaytet"}]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Games/Entertainment :: Turn Based Strategy",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
requires-python = ">=3.9"
dependencies = [
    "importlib-resources",
    "matplotlib",
    "numba",
    "numpy",
    "pillow",
    "pyopengl",
    "pyqt5",
    "pyqtgraph",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["./src"]

[tool.setuptools.package-data]
vendeeglobe = [
    "resources/*",
]

[tool.black]
skip-string-normalization = true
